force-app/main/default/objects/SOLXYZCSO001__ReportOutPutHistory__c/fields/SOLXYZCSO001__explanation__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__explanation__c</fullName>
    <label>説明</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>