force-app/main/default/objects/SOLXYZCSO001__ReportOutPutHistory__c/fields/SOLXYZCSO001__OriginalID__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__OriginalID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>元履歴ID</label>
    <referenceTo>SOLXYZCSO001__ReportOutPutHistory__c</referenceTo>
    <relationshipName>ROPHF7ka</relationshipName>
    <type>Lookup</type>
</CustomField>