force-app/main/default/objects/SOLXYZCSO001__ReportOutPutHistory__c/fields/SOLXYZCSO001__OutputRecLongId__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__OutputRecLongId__c</fullName>
    <label>出力対象レコードID</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>