force-app/main/default/objects/SOLXYZCSO001__ReportOutPutHistory__c/fields/SOLXYZCSO001__ReportDefinitionID__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__ReportDefinitionID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>帳票定義ID</label>
    <referenceTo>SOLXYZCSO001__ReportDefinition__c</referenceTo>
    <relationshipName>RDzLPb</relationshipName>
    <type>Lookup</type>
</CustomField>