force-app/main/default/objects/SOLXYZCSO001__ReportOutPutHistory__c/fields/SOLXYZCSO001__today__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__today__c</fullName>
    <label>日付</label>
    <type>Date</type>
</CustomField>